--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .idea/
 *.log
 *.iml
+_config.yml
 yarn.lock
 package-lock.json
 node_modules/
@@ -20,4 +21,4 @@ source/lib/ua-parser-js/*
 !source/lib/ua-parser-js/dist/
 
 !source/lib/velocity/
-./_config.yml
+_config.yml
